add Pagination object to replace limit/offset for all methods; update GetArtifactHistory to use Pagination; update tests which are using GetArtifactHistory; update serialization settings for ReviewedArtifact

--- a/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Factories\ArtifactWrapperFactory.cs" />
     <Compile Include="Factories\ImpactAnalysisFactory.cs" />
     <Compile Include="Impl\AdminRole.cs" />
+    <Compile Include="Impl\Pagination.cs" />
     <Compile Include="NovaModel\AdminStoreModel\InstanceGroup.cs" />
     <Compile Include="NovaModel\AdminStoreModel\InstanceGroupUser.cs" />
     <Compile Include="Impl\QueryResult.cs" />
