add methods to get/set Federated Authentication Enabled in DB; add method to get UserManagementSettings add 3 tests for methods affected by Federated Authentication Enabled setting

--- a/blueprint-automationframework/Blueprint-Tests/Tests/AdminStoreTests/AdminStoreTests.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Tests/AdminStoreTests/AdminStoreTests.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="AccessControlDoubleTests.cs" />
     <Compile Include="CustomUserIconTests.cs" />
+    <Compile Include="FederatedAuthenticationTests.cs" />
     <Compile Include="InstanceFolderTests.cs" />
     <Compile Include="InstanceProjectTests.cs" />
     <Compile Include="JobResultFileTests.cs" />
