--- a/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
+++ b/blueprint-automationframework/Blueprint-Tests/Model/Model.csproj
@@ -85,6 +85,7 @@
     <Compile Include="NovaModel\AdminStoreModel\CreateResult.cs" />
     <Compile Include="NovaModel\AdminStoreModel\DeleteResult.cs" />
     <Compile Include="NovaModel\AdminStoreModel\OperationScope.cs" />
+    <Compile Include="NovaModel\AdminStoreModel\UserManagementSettings.cs" />
     <Compile Include="NovaModel\Reviews\ApprovalType.cs" />
     <Compile Include="NovaModel\Reviews\BaseReviewArtifact.cs" />
     <Compile Include="NovaModel\Reviews\ReviewArtifact.cs" />
