--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Controllers\InstanceController.cs" />
     <Compile Include="Controllers\JobsController.cs" />
     <Compile Include="Controllers\LogController.cs" />
+    <Compile Include="Controllers\WorkflowController.cs" />
     <Compile Include="Helpers\EmailHelper.cs" />
     <Compile Include="Helpers\HashingUtilities.cs" />
     <Compile Include="Helpers\JobsValidationHelper.cs" />
@@ -143,6 +144,12 @@
     <Compile Include="Models\LicenseTransactionUser.cs" />
     <Compile Include="Models\LoginUser.cs" />
     <Compile Include="Models\UserGroupSource.cs" />
+    <Compile Include="Models\Workflow\IeGroup.cs" />
+    <Compile Include="Models\Workflow\IeState.cs" />
+    <Compile Include="Models\Workflow\IeTransition.cs" />
+    <Compile Include="Models\Workflow\ImportWorkflowResult.cs" />
+    <Compile Include="Models\Workflow\IeWorkflow.cs" />
+    <Compile Include="Models\Workflow\DWorkflow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AuthenticationRepository.cs" />
     <Compile Include="Repositories\IAuthenticationRepository.cs" />
@@ -156,6 +163,11 @@
     <Compile Include="Repositories\SqlInstanceRepository.cs" />
     <Compile Include="Repositories\SqlSettingsRepository.cs" />
     <Compile Include="Repositories\SqlUserRepository.cs" />
+    <Compile Include="Repositories\Workflow\IWorkflowRepository.cs" />
+    <Compile Include="Repositories\Workflow\IWorkflowValidator.cs" />
+    <Compile Include="Repositories\Workflow\WorkflowRepository.cs" />
+    <Compile Include="Repositories\Workflow\WorkflowValidationResult.cs" />
+    <Compile Include="Repositories\Workflow\WorkflowValidator.cs" />
     <Compile Include="Saml\BpSaml2SecurityTokenHandler.cs" />
     <Compile Include="Saml\FederatedAuthenticationErrorCode.cs" />
     <Compile Include="Saml\FederatedAuthenticationException.cs" />
