--- a/svc/lib/ServiceLibrary/ServiceLibrary.csproj
+++ b/svc/lib/ServiceLibrary/ServiceLibrary.csproj
@@ -53,6 +53,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.DynamicData" />
@@ -100,6 +101,7 @@
     <Compile Include="Helpers\HttpWebClient.cs" />
     <Compile Include="Helpers\IHttpWebClient.cs" />
     <Compile Include="Helpers\ImageHelper.cs" />
+    <Compile Include="Helpers\ISqlHelper.cs" />
     <Compile Include="Helpers\ItemTypePredefinedExtension.cs" />
     <Compile Include="Helpers\RemoveSecurityRelatedHeadersHttpModule.cs" />
     <Compile Include="Helpers\SerializationHelper.cs" />
@@ -107,6 +109,7 @@
     <Compile Include="Helpers\ServerUriHelper.cs" />
     <Compile Include="Helpers\ComplexObjectReader.cs" />
     <Compile Include="Helpers\ServiceConstants.cs" />
+    <Compile Include="Helpers\SqlHelper.cs" />
     <Compile Include="Helpers\StatusControllerHelper.cs" />
     <Compile Include="Helpers\JsonHelper.cs" />
     <Compile Include="Helpers\ThrowIf.cs" />
