--- a/svc/ArtifactStore/ArtifactStore.csproj
+++ b/svc/ArtifactStore/ArtifactStore.csproj
@@ -110,12 +110,15 @@
     <Compile Include="Controllers\RelationshipsController.cs" />
     <Compile Include="Controllers\ReviewContainersController.cs" />
     <Compile Include="Controllers\StatusController.cs" />
+    <Compile Include="Controllers\VersionControlController.cs" />
     <Compile Include="Controllers\WorkflowController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\CollectionHelper.cs" />
     <Compile Include="Helpers\MentionHelper.cs" />
     <Compile Include="Helpers\PropertyHelper.cs" />
+    <Compile Include="Models\VersionControl\PublishEnvironment.cs" />
     <Compile Include="Helpers\ReviewRawDataHelper.cs" />
     <Compile Include="Models\ArtifactHistoryResultSet.cs" />
     <Compile Include="Models\ArtifactDetailsResultSet.cs" />
@@ -163,15 +166,28 @@
     <Compile Include="Repositories\PropertyXml\Models\XmlCustomProperty.cs" />
     <Compile Include="Repositories\PropertyXml\Models\XmlCustomPropertyValidValue.cs" />
     <Compile Include="Repositories\PropertyXml\XmlModelSerializer.cs" />
+    <Compile Include="Repositories\Revisions\SqlRevisionRepository.cs" />
     <Compile Include="Repositories\SqlAttachmentsRepository.cs" />
     <Compile Include="Repositories\SqlArtifactVersionsRepository.cs" />
     <Compile Include="Repositories\SqlDiscussionsRepository.cs" />
     <Compile Include="Repositories\SqlProjectMetaRepository.cs" />
     <Compile Include="Repositories\SqlRelationshipsRepository.cs" />
     <Compile Include="Repositories\SqlReviewsRepository.cs" />
+    <Compile Include="Repositories\VersionControl\IPublishRepository.cs" />
+    <Compile Include="Repositories\VersionControl\SqlJournalPublishRepository.cs" />
+    <Compile Include="Repositories\VersionControl\SqlPublishAttachmentsRepository.cs" />
+    <Compile Include="Repositories\VersionControl\SqlPublishCollectionAssignmentsRepository.cs" />
+    <Compile Include="Repositories\VersionControl\SqlPublishItemsRepository.cs" />
+    <Compile Include="Repositories\VersionControl\SqlPublishPropertiesRepository.cs" />
+    <Compile Include="Repositories\VersionControl\SqlPublishRelationshipsRepository.cs" />
+    <Compile Include="Repositories\VersionControl\SqlPublishRepository.cs" />
+    <Compile Include="Repositories\VersionControl\SqlPublishRepositoryComposer.cs" />
+    <Compile Include="Repositories\VersionControl\SqlPublishReuseProcessingRepository.cs" />
+    <Compile Include="Repositories\VersionControl\SqlVersionControlRepository.cs" />
     <Compile Include="Repositories\Workflow\IWorkflowRepository.cs" />
     <Compile Include="Repositories\Workflow\SqlWorkflowRepository.cs" />
     <Compile Include="Executors\StateChangeExecutor.cs" />
+    <Compile Include="Services\VersionControl\VersionControlService.cs" />
     <Compile Include="Services\Workflow\WorkflowService.cs" />
   </ItemGroup>
   <ItemGroup>
