--- a/svc/lib/ServiceLibrary.Tests/ServiceLibrary.Tests.csproj
+++ b/svc/lib/ServiceLibrary.Tests/ServiceLibrary.Tests.csproj
@@ -85,6 +85,7 @@
       <Link>Properties\SolutionAssemblyVersion.cs</Link>
     </Compile>
     <Compile Include="Attributes\BaseExceptionFilterAttributeTests.cs" />
+    <Compile Include="Attributes\FeatureActivationAttributeTests.cs" />
     <Compile Include="Attributes\NoCacheAttributeTests.cs" />
     <Compile Include="Attributes\SessionAttributeTests.cs" />
     <Compile Include="EventSources\EventSourcesTests.cs" />
@@ -97,6 +98,7 @@
     <Compile Include="Helpers\TestsForHelpers\StatusControllerHelperTests.cs" />
     <Compile Include="Helpers\WebApiConfigHelper.cs" />
     <Compile Include="LocalLog\LocalLogTests.cs" />
+    <Compile Include="Models\Licenses\FeatureInformationTests.cs" />
     <Compile Include="Models\LicenseTransactionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ArtifactPermissionsRepositoryTests.cs" />
