--- a/svc/ArtifactStore/ArtifactStore.csproj
+++ b/svc/ArtifactStore/ArtifactStore.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Repositories\SqlProjectMetaRepository.cs" />
     <Compile Include="Repositories\SqlRelationshipsRepository.cs" />
     <Compile Include="Repositories\SqlReviewsRepository.cs" />
+    <Compile Include="Repositories\VersionControl\ArtifactsHierarchyValidator.cs" />
     <Compile Include="Repositories\VersionControl\IPublishRepository.cs" />
     <Compile Include="Repositories\VersionControl\PublishRepositoriesContainer.cs" />
     <Compile Include="Repositories\VersionControl\SqlJournalPublishRepository.cs" />
