--- a/svc/ArtifactStore/ArtifactStore.csproj
+++ b/svc/ArtifactStore/ArtifactStore.csproj
@@ -118,6 +118,15 @@
     <Compile Include="Helpers\CollectionHelper.cs" />
     <Compile Include="Helpers\MentionHelper.cs" />
     <Compile Include="Helpers\PropertyHelper.cs" />
+    <Compile Include="Helpers\SensitivityCommonHelper.cs" />
+    <Compile Include="Models\PropertyTypePredefinedExtension.cs" />
+    <Compile Include="Models\Reuse\ItemTypeReuseTemplate.cs" />
+    <Compile Include="Models\Reuse\PropertyTypeReuseTemplate.cs" />
+    <Compile Include="Models\Reuse\ReconcileProperty.cs" />
+    <Compile Include="Models\Reuse\ReuseSystemPropertiesMap.cs" />
+    <Compile Include="Models\Reuse\ReuseTemplateSettingsMap.cs" />
+    <Compile Include="Models\Reuse\SqlItemTypeReuseTemplate.cs" />
+    <Compile Include="Models\Reuse\SqlReuseSettingsInfo.cs" />
     <Compile Include="Models\VersionControl\PublishEnvironment.cs" />
     <Compile Include="Helpers\ReviewRawDataHelper.cs" />
     <Compile Include="Models\ArtifactHistoryResultSet.cs" />
@@ -167,6 +176,9 @@
     <Compile Include="Repositories\PropertyXml\Models\XmlCustomProperty.cs" />
     <Compile Include="Repositories\PropertyXml\Models\XmlCustomPropertyValidValue.cs" />
     <Compile Include="Repositories\PropertyXml\XmlModelSerializer.cs" />
+    <Compile Include="Models\Reuse\SqlItemTypeInfo.cs" />
+    <Compile Include="Models\Reuse\SqlPropertyTypeInfo.cs" />
+    <Compile Include="Repositories\Reuse\SqlReuseRepository.cs" />
     <Compile Include="Repositories\Revisions\SqlRevisionRepository.cs" />
     <Compile Include="Repositories\SqlAttachmentsRepository.cs" />
     <Compile Include="Repositories\SqlArtifactVersionsRepository.cs" />
