--- a/svc/lib/ServiceLibrary/ServiceLibrary.csproj
+++ b/svc/lib/ServiceLibrary/ServiceLibrary.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Models\Enums\ElementType.cs" />
     <Compile Include="Models\Enums\ItemTypePredefined.cs" />
     <Compile Include="Models\Enums\ItemTypeReuseTemplateSetting.cs" />
+    <Compile Include="Models\Enums\ModificationType.cs" />
     <Compile Include="Models\Enums\ProjectSection.cs" />
     <Compile Include="Models\Enums\PropertyTypeReuseTemplateSettings.cs" />
     <Compile Include="Models\Enums\PublishErrors.cs" />
