--- a/svc/ArtifactStore.Tests/ArtifactStore.Tests.csproj
+++ b/svc/ArtifactStore.Tests/ArtifactStore.Tests.csproj
@@ -86,6 +86,8 @@
     <Compile Include="Controllers\WorkflowControllerTests.cs" />
     <Compile Include="Executors\StateChangeExecutorTests.cs" />
     <Compile Include="Helpers\MentionHelperTests.cs" />
+    <Compile Include="Helpers\SensitivityCommonHelperTests.cs" />
+    <Compile Include="Helpers\ReuseSystemPropertiesMapTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\SqlArtifactRelationshipsRepositoryTests.cs" />
     <Compile Include="Repositories\SqlDiscussionsRepositoryTests.cs" />
