--- a/svc/AdminStore/AdminStore.csproj
+++ b/svc/AdminStore/AdminStore.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Models\LicenseTransactionUser.cs" />
     <Compile Include="Models\LoginUser.cs" />
     <Compile Include="Models\UserGroupSource.cs" />
+    <Compile Include="Models\Workflow\WorkflowArtifactTypeDto.cs" />
     <Compile Include="Models\Workflow\SqlProjectPathPair.cs" />
     <Compile Include="Models\Workflow\SqlState.cs" />
     <Compile Include="Models\Workflow\SqlTrigger.cs" />
@@ -186,6 +187,7 @@
     <Compile Include="Models\Workflow\SqlWorkflow.cs" />
     <Compile Include="Models\Workflow\SqlWorkflowArtifactTypesAndProjects.cs" />
     <Compile Include="Models\Workflow\WorkflowDto.cs" />
+    <Compile Include="Models\Workflow\WorkflowProjectDto.cs" />
     <Compile Include="Models\Workflow\XmlTriggerPermissions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AuthenticationRepository.cs" />
