--- a/svc/ConfigControl/Web.config
+++ b/svc/ConfigControl/Web.config
@@ -5,15 +5,13 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="AdminStorage"
-         providerName="System.Data.SqlClient"
-         connectionString="data source=BlueprintDevDB;initial catalog=Blueprint_AdminStorage;integrated security=True;min pool size=4;max pool size=128;load balance timeout=2;packet size=16384;connectretrycount=3;connectretryinterval=3;MultipleActiveResultSets=True;" />
+    <add name="AdminStorage" providerName="System.Data.SqlClient" connectionString="data source=BlueprintDevDB;initial catalog=Blueprint_AdminStorage;integrated security=True;min pool size=4;max pool size=128;load balance timeout=2;packet size=16384;connectretrycount=3;connectretryinterval=3;MultipleActiveResultSets=True;" />
   </connectionStrings>
   <appSettings>
-    <add key="LocalLogFile" value="Log\BlueprintSys.log"/>
+    <add key="LocalLogFile" value="Log\BlueprintSys.log" />
     <!--Number of records returned by GetLog request-->
-    <add key="LogRecordsLimit" value="10000"/>
-    <add key="LogRecordsChunkSize" value="100"/>
+    <add key="LogRecordsLimit" value="10000" />
+    <add key="LogRecordsChunkSize" value="100" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
@@ -21,10 +19,10 @@
   </system.web>
   <system.webServer>
     <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
-      <remove name="OPTIONSVerbHandler"/>
-      <remove name="TRACEVerbHandler"/>
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
       <!-- Machines with WebDAV installed would not enable PUT/DELETE requests and would return a 405 Method not allowed -->
       <!-- To enable PUT: http://stackoverflow.com/questions/19162825/web-api-put-request-generates-an-http-405-method-not-allowed-error-->
       <remove name="WebDAV" />
@@ -32,7 +30,7 @@
     <modules>
       <!-- Machines with WebDAV installed would not enable PUT/DELETE requests and would return a 405 Method not allowed -->
       <!-- To enable PUT: http://stackoverflow.com/questions/19162825/web-api-put-request-generates-an-http-405-method-not-allowed-error-->
-      <remove name="WebDAVModule"/>
+      <remove name="WebDAVModule" />
     </modules>
     <security>
       <authentication>
@@ -59,7 +57,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -73,8 +71,8 @@
   </runtime>
   <system.codedom>
     <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
 </configuration>
