--- a/svc/lib/ServiceLibrary/packages.config
+++ b/svc/lib/ServiceLibrary/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Dapper.StrongName" version="1.50.0-beta1" targetFramework="net452" />
+  <package id="Dapper.StrongName" version="1.50.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="Swashbuckle.Core" version="5.5.3" targetFramework="net452" />
 </packages>
