--- a/win_svc/ActionHandlerService/App.config
+++ b/win_svc/ActionHandlerService/App.config
@@ -40,6 +40,7 @@
     <add key="Tenancy" value="Single" />
     <add key="Transport" value="RabbitMQ" />
     <add key="ActionTypesCsv" value="All" />
+    <add key="Handler" value="Cloud.MessageServer"/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
