--- a/win_svc/ActionHandlerService/ActionHandlerService.csproj
+++ b/win_svc/ActionHandlerService/ActionHandlerService.csproj
@@ -64,14 +64,6 @@
       <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Web.Http.SelfHost, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.SelfHost.5.2.3\lib\net45\System.Web.Http.SelfHost.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -119,9 +111,9 @@
       <Project>{74353EB4-59E8-4F3E-A9E3-9927546970FD}</Project>
       <Name>BluePrintSys.Messaging.CrossCutting</Name>
     </ProjectReference>
-    <ProjectReference Include="..\BluePrintSys.Messaging.Models.Action\BluePrintSys.Messaging.Models.Action.csproj">
+    <ProjectReference Include="..\BluePrintSys.Messaging.Models.Action\BluePrintSys.Messaging.Models.Actions.csproj">
       <Project>{03BD78CA-0BB7-4488-A0B3-4E07CE05391F}</Project>
-      <Name>BluePrintSys.Messaging.Models.Action</Name>
+      <Name>BluePrintSys.Messaging.Models.Actions</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
