--- a/win_svc/ActionHandlerServiceTests/ActionHandlerServiceTests.csproj
+++ b/win_svc/ActionHandlerServiceTests/ActionHandlerServiceTests.csproj
@@ -111,9 +111,9 @@
       <Project>{74353EB4-59E8-4F3E-A9E3-9927546970FD}</Project>
       <Name>BluePrintSys.Messaging.CrossCutting</Name>
     </ProjectReference>
-    <ProjectReference Include="..\BluePrintSys.Messaging.Models.Action\BluePrintSys.Messaging.Models.Action.csproj">
+    <ProjectReference Include="..\BluePrintSys.Messaging.Models.Action\BluePrintSys.Messaging.Models.Actions.csproj">
       <Project>{03BD78CA-0BB7-4488-A0B3-4E07CE05391F}</Project>
-      <Name>BluePrintSys.Messaging.Models.Action</Name>
+      <Name>BluePrintSys.Messaging.Models.Actions</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
