--- a/win_svc/BluePrintSys.Messaging.Models.Action/BluePrintSys.Messaging.Models.Actions.csproj
+++ b/win_svc/BluePrintSys.Messaging.Models.Action/BluePrintSys.Messaging.Models.Actions.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{03BD78CA-0BB7-4488-A0B3-4E07CE05391F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BluePrintSys.Messaging.Models.Action</RootNamespace>
-    <AssemblyName>BluePrintSys.Messaging.Models.Action</AssemblyName>
+    <RootNamespace>BluePrintSys.Messaging.Models.Actions</RootNamespace>
+    <AssemblyName>BluePrintSys.Messaging.Models.Actions</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
