DEV-183 allow clients to specify the error queue in the config file

--- a/win_svc/ActionHandlerService/App.config
+++ b/win_svc/ActionHandlerService/App.config
@@ -41,6 +41,7 @@
     <add key="Transport" value="RabbitMQ" />
     <add key="ActionTypesCsv" value="All" />
     <add key="Handler" value="Cloud.MessageServer"/>
+    <add key="ErrorQueue" value="errors"/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
