--- a/win_svc/ActionHandlerService/ActionHandlerService.csproj
+++ b/win_svc/ActionHandlerService/ActionHandlerService.csproj
@@ -76,6 +76,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions.cs" />
     <Compile Include="Logging\Log4NetStandardLogListener.cs" />
     <Compile Include="MessageHandlers\BaseMessageHandler.cs" />
     <Compile Include="MessageHandlers\GenerateDescendants\GenerateDescendantsActionHelper.cs" />
